src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__remove_plugin-3.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf
snapshot_kind: text
---
/tmp/.mise.toml:
