src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__remove_plugin.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.to_toolset().unwrap()
snapshot_kind: text
---
Toolset {
    versions: {},
    source: None,
    tera_ctx: OnceCell(Uninit),
}
