src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__replace_versions-2.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.dump().unwrap()
---
[tools]
node = ["16.0.1", "18.0.1"]

