src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__replace_versions-3.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf
---
/tmp/.mise.toml: node@16.0.1 node@18.0.1
