src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__replace_versions.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.to_toolset().unwrap()
---
Toolset {
    versions: {
        BackendArg(node): ToolVersionList {
            backend: BackendArg(node),
            versions: [],
            requests: [
                Version {
                    backend: BackendArg(node),
                    version: "16.0.1",
                    options: ToolOptions {
                        core: CoreToolOptions {
                            os: None,
                            depends: None,
                            install_env: {},
                            lazy: None,
                            lazy_bins: [],
                            auto_update: None,
                        },
                        opts: RawBackendOptions {
                            values: {},
                        },
                    },
                    source: MiseToml(
                        "/tmp/.mise.toml",
                    ),
                    lockfile_scope: Default,
                },
                Version {
                    backend: BackendArg(node),
                    version: "18.0.1",
                    options: ToolOptions {
                        core: CoreToolOptions {
                            os: None,
                            depends: None,
                            install_env: {},
                            lazy: None,
                            lazy_bins: [],
                            auto_update: None,
                        },
                        opts: RawBackendOptions {
                            values: {},
                        },
                    },
                    source: MiseToml(
                        "/tmp/.mise.toml",
                    ),
                    lockfile_scope: Default,
                },
            ],
            source: MiseToml(
                "/tmp/.mise.toml",
            ),
        },
    },
    source: Some(
        MiseToml(
            "/tmp/.mise.toml",
        ),
    ),
    tera_ctx: OnceCell {
        value: None,
    },
}
