src/config/config_file/snapshots/mise__config__config_file__mise_toml__tests__set_alias.snap
---
source: src/config/config_file/mise_toml.rs
expression: cf.alias
---
{
    ForgeArg("node"): {
        "16": "16.0.0",
        "18": "18.0.1",
        "20": "20.0.0",
    },
    ForgeArg("python"): {
        "3.10": "3.10.0",
    },
}
